WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192689
[iOS] Web Inspector: Occasional UIProcess crashes under WebPageProxy::showInspectorIndication
https://bugs.webkit.org/show_bug.cgi?id=192689
Summary
[iOS] Web Inspector: Occasional UIProcess crashes under WebPageProxy::showIns...
Joseph Pecoraro
Reported
2018-12-13 19:35:19 PST
[iOS] Web Inspector: Occasional UIProcess crashes under WebPageProxy::showInspectorIndication Steps to Reproduce: 1. Start Safari on iPad 2. Load a few tabs 3. Safari > Develop > iPad > hover items => Safari on iPad may crash Notes: With some logging it looks like the WebPageProxy was not valid, it should have been removed from being a target: (WebKit) >>> WebPageDebuggable::setIndicating - yes (WebKit) >>> WebPageInspectorController::setIndicating - yes (WebKit) >>> WebPageProxy::showInspectorIndication - valid - no (WebKit) >>> WebPageProxy::showInspectorIndication - this - 0x10b87e618 (WebKit) >>> WebPageProxy::showInspectorIndication - &pageClient() – 0x0
Attachments
[PATCH] Proposed Fix
(1.96 KB, patch)
2018-12-13 19:36 PST
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2018-12-13 19:35:29 PST
<
rdar://problem/46323610
>
Joseph Pecoraro
Comment 2
2018-12-13 19:36:45 PST
Created
attachment 357288
[details]
[PATCH] Proposed Fix
WebKit Commit Bot
Comment 3
2018-12-13 20:10:09 PST
Comment on
attachment 357288
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 357288 Committed
r239196
: <
https://trac.webkit.org/changeset/239196
>
WebKit Commit Bot
Comment 4
2018-12-13 20:10:10 PST
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 5
2018-12-13 20:39:25 PST
Committed
r239197
: <
https://trac.webkit.org/changeset/239197
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug