[iOS] Web Inspector: Occasional UIProcess crashes under WebPageProxy::showInspectorIndication https://bugs.webkit.org/show_bug.cgi?id=192689 <rdar://problem/46323610>

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2018-12-13
Reviewed by Simon Fraser.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::close):
* UIProcess/WebPageProxy.h:
Don't wait until ~WebPageProxy to destroy the WebPageProxyDebuggable
which broadcasts it as a remote inspector target. Terminate this
as soon as the WebPageProxy closes and becomes invalid.

Canonical link: https://commits.webkit.org/207269@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239196 268f45cc-cd09-0410-ab3c-d52691b4dbfc