Source/WebKit/UIProcess/WebPageProxy.h
@@ -2295,7 +2295,7 @@ private:
 
     const std::unique_ptr<WebPageInspectorController> m_inspectorController;
 #if ENABLE(REMOTE_INSPECTOR)
-    const std::unique_ptr<WebPageDebuggable> m_inspectorDebuggable;
+    std::unique_ptr<WebPageDebuggable> m_inspectorDebuggable;
 #endif
 
     std::optional<SpellDocumentTag> m_spellDocumentTag;
